[tool.poetry]
name = "PlayingPong"
version = "0.1.0"
description = "A Reinforcement Learning Approach to implementing automated game play of Pong using only user-viewable data."
authors = ["Sebastian Engels <me@sebastian-engels.com>"]
readme = "README.md"
packages = [{include = "PlayingPong"}]

[tool.poetry.dependencies]
python = ">=3.10"
gymnasium = "^0.29.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
